fix private key

--- a/messenger/templates/lvlup/messenger.html
+++ b/messenger/templates/lvlup/messenger.html
@@ -1,5 +1,7 @@
 {% extends 'lvlup/base.html' %}
+{% load static %}
 
 
 {% block content %}
+    <script src="{% static 'js/messeges.js' %}"></script>
 {% endblock %}
